force-app/main/default/objects/cdcpc__RD_Attributes_Lookup_Detail__c/fields/cdcpc__Text__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Text__c</fullName>
    <label>Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>