force-app/main/default/objects/cdcpc__RD_Attributes_Lookup_Detail__c/fields/cdcpc__TextVal4__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__TextVal4__c</fullName>
    <label>TextVal4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>