force-app/main/default/objects/cdcpc__RD_Attributes_Lookup_Detail__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__Attribute__c</columns>
    <columns>cdcpc__Text1Val__c</columns>
    <columns>cdcpc__Text2Val__c</columns>
    <columns>cdcpc__Text3Val__c</columns>
    <columns>cdcpc__TextVal4__c</columns>
    <columns>cdcpc__NumVal1__c</columns>
    <columns>cdcpc__NumVal2__c</columns>
    <columns>cdcpc__Text__c</columns>
    <columns>cdcpc__Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cdcpc__Attribute__c</field>
        <operation>contains</operation>
        <value>hsn</value>
    </filters>
    <label>All</label>
</ListView>